--- a/style.sass
+++ b/style.sass
@@ -47,9 +47,17 @@ body
         width: 560px
         text-align: center
 
-    .firstPlayer
-        position: absolute
+    .chips img
         width: 50px
+        position: absolute
+        display: block
+    .secondPlayer
+        left: 150px
+    .thirdPlayer
+        top: 150px
+    .fourthPlayer
+        top: 150px
+        left: 150px
 
 
 
