--- a/style.sass
+++ b/style.sass
@@ -47,6 +47,10 @@ body
         width: 560px
         text-align: center
 
+        span
+            text-transform: uppercase
+            color: yellow
+
     .chips img
         width: 50px
         position: absolute
