бд, rest-api, структура проекта, ранняя стадия

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Монополия</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/static/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Spectral:ital@1&display=swap" rel="stylesheet">
@@ -48,22 +48,22 @@
         </div>
 
         <div class="dicePlaying">
-            <img id="dicePlaying1" src="image/dice_1.png" alt="1">
-            <img id="dicePlaying2" src="image/dice_2.png" alt="2">
-            <img id="dicePlaying3" src="image/dice_3.png" alt="3">
-            <img id="dicePlaying4" src="image/dice_4.png" alt="4">
-            <img id="dicePlaying5" src="image/dice_5.png" alt="5">
-            <img id="dicePlaying6" src="image/dice_6.png" alt="6">
+            <img id="dicePlaying1" src="/static/image/dice_1.png" alt="1">
+            <img id="dicePlaying2" src="/static/image/dice_2.png" alt="2">
+            <img id="dicePlaying3" src="/static/image/dice_3.png" alt="3">
+            <img id="dicePlaying4" src="/static/image/dice_4.png" alt="4">
+            <img id="dicePlaying5" src="/static/image/dice_5.png" alt="5">
+            <img id="dicePlaying6" src="/static/image/dice_6.png" alt="6">
         </div>
 
         <div class="chips">
-            <img id="firstPlayer" class="firstPlayer" src="image/car_64.png" alt="firstPlayer">
-            <img id="secondPlayer" class="secondPlayer" src="image/car_2.png" alt="secondPlayer">
-            <img id="thirdPlayer" class="thirdPlayer" src="image/car_3.png" alt="thirdPlayer">
-            <img id="fourthPlayer" class="fourthPlayer" src="image/car_4.png" alt="fourthPlayer">
+            <img id="firstPlayer" class="firstPlayer" src="/static/image/car_1.png" alt="firstPlayer">
+            <img id="secondPlayer" class="secondPlayer" src="/static/image/car_2.png" alt="secondPlayer">
+            <img id="thirdPlayer" class="thirdPlayer" src="/static/image/car_3.png" alt="thirdPlayer">
+            <img id="fourthPlayer" class="fourthPlayer" src="/static/image/car_4.png" alt="fourthPlayer">
         </div>
     </div>
 
-    <script src="dicePlaying.js"></script>
+    <script src="/static/dicePlaying.js"></script>
 </body>
 </html>
