--- a/static/style.sass
+++ b/static/style.sass
@@ -54,14 +54,19 @@ body
     .chips img
         width: 50px
         position: absolute
-        display: block
+
+    .firstPlayer
+        display: none
     .secondPlayer
         left: 150px
+        display: none
     .thirdPlayer
         top: 150px
+        display: none
     .fourthPlayer
         top: 150px
         left: 150px
+        display: none
 
 
 
