--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Монополия</title>
+    <link rel="icon" href="/static/image/icon.png">
     <link rel="stylesheet" href="/static/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -57,10 +58,10 @@
         </div>
 
         <div class="chips">
-            <img id="firstPlayer" class="firstPlayer" src="/static/image/car_1.png" alt="firstPlayer">
-            <img id="secondPlayer" class="secondPlayer" src="/static/image/car_2.png" alt="secondPlayer">
-            <img id="thirdPlayer" class="thirdPlayer" src="/static/image/car_3.png" alt="thirdPlayer">
-            <img id="fourthPlayer" class="fourthPlayer" src="/static/image/car_4.png" alt="fourthPlayer">
+            <img id="0_Player" class="firstPlayer" src="/static/image/car_1.png" alt="firstPlayer">
+            <img id="1_Player" class="secondPlayer" src="/static/image/car_2.png" alt="secondPlayer">
+            <img id="2_Player" class="thirdPlayer" src="/static/image/car_3.png" alt="thirdPlayer">
+            <img id="3_Player" class="fourthPlayer" src="/static/image/car_4.png" alt="fourthPlayer">
         </div>
     </div>
 
