switching to synchronization between devices, only moves on regular cards

--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
         </div>
         <div id="rollDice" class="rollDice">
             <h3>Ходит <span id="numberPlayer">желтый</span></h3>
-            <input type="button" onclick="dicePlaying()" value="бросить кубики">
+            <div id="buttonDicePlaying"><input type="button" onclick="dicePlaying()" value="бросить кубики"></div>
         </div>
 
         <div class="dicePlaying">
@@ -66,5 +66,6 @@
     </div>
 
     <script src="/static/dicePlaying.js"></script>
+    <!-- <script type="module" src="/static/withServer.js"></script> -->
 </body>
 </html>
