--- a/static/style.css
+++ b/static/style.css
@@ -47,6 +47,36 @@ body {
   text-transform: uppercase;
   color: yellow;
 }
+.filed .question {
+  position: absolute;
+  top: 300px;
+  left: 250px;
+  visibility: hidden;
+}
+.filed .question input {
+  width: 100%;
+  height: 100%;
+}
+.filed .question div {
+  position: relative;
+  width: 225px;
+  height: 50px;
+  font-size: 28px;
+}
+.filed .question input {
+  border: 0;
+}
+.filed .question .answer_2 {
+  top: 50px;
+}
+.filed .question .answer_3 {
+  top: -100px;
+  left: 275px;
+}
+.filed .question .answer_4 {
+  top: -50px;
+  left: 275px;
+}
 .filed .chips img {
   width: 50px;
   position: absolute;
