--- a/static/style.sass
+++ b/static/style.sass
@@ -51,6 +51,34 @@ body
             text-transform: uppercase
             color: yellow
 
+    .question
+        position: absolute
+        top: 300px
+        left: 250px
+        visibility: hidden
+        input
+            width: 100%
+            height: 100%
+        div
+            position: relative
+            width: 225px
+            height: 50px
+            font-size: 28px
+        input
+            border: 0
+
+        .answer_2
+            top: 50px
+
+        .answer_3
+            top: -100px
+            left: 275px
+
+        .answer_4
+            top: -50px
+            left: 275px
+
+
     .chips img
         width: 50px
         position: absolute
