--- a/templates/create_game.html
+++ b/templates/create_game.html
@@ -8,7 +8,7 @@
     <form method="post">
           <fieldset>
                 <legend>Параметры игры</legend>
-                <label for="count_players">Количество игроков (2-4)</label><input type="number" min="2" max="4" value="2" id="count_players" name="count_players">
+                <label for="number_of_players">Количество игроков (2-4)</label><input type="number" min="2" max="4" value="2" id="number_of_players" name="number_of_players">
           </fieldset>
     <input type="submit" value="Создать игру">
     </form>
