--- a/templates/index.html
+++ b/templates/index.html
@@ -58,10 +58,10 @@
         </div>
         <div id="question" class="question">
             <h3 id="question_1">Зачем ты в это играешь?</h3>
-            <div id="answer_1" class="answer_1"><input id="btn_answer_1" type="button" onclick="clickAnswer1()" value=""></div>
-            <div id="answer_2" class="answer_2"><input id="btn_answer_2" type="button" onclick="clickAnswer2()" value=""></div>
-            <div id="answer_3" class="answer_3"><input id="btn_answer_3" type="button" onclick="clickAnswer3()" value=""></div>
-            <div id="answer_4" class="answer_4"><input id="btn_answer_4" type="button" onclick="clickAnswer4()" value=""></div>
+            <div id="answer_1" class="answer_1"><input id="btn_answer_1" type="button" onclick="choosingAnswer(1)" value=""></div>
+            <div id="answer_2" class="answer_2"><input id="btn_answer_2" type="button" onclick="choosingAnswer(2)" value=""></div>
+            <div id="answer_3" class="answer_3"><input id="btn_answer_3" type="button" onclick="choosingAnswer(3)" value=""></div>
+            <div id="answer_4" class="answer_4"><input id="btn_answer_4" type="button" onclick="choosingAnswer(4)" value=""></div>
         </div>
         <div class="chips">
             <img id="0_Player" class="firstPlayer" src="/static/image/car_1.png" alt="firstPlayer">
@@ -72,6 +72,5 @@
     </div>
 
     <script src="/static/dicePlaying.js"></script>
-    <!-- <script type="module" src="/static/withServer.js"></script> -->
 </body>
 </html>
