--- a/templates/create_game.html
+++ b/templates/create_game.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
+        <link rel="icon" href="/static/image/icon.png">
     <title>Создание игры</title>
 </head>
 <body>
