--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600&family=Spectral:ital@1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/index.css">
 </head>
 <body>
     <div class="playerStatistics">
@@ -16,33 +16,29 @@
                 <h4>Первый игрок</h4>
                 <p>Количество перемещений <i id="0numberOfMoves"></i><br>
                     Количество очков <i id="0numberOfPoints"></i><br>
-                    Количество полученных вопросов <i id="0numberOfQuestionsReceived"></i><br>
-                    Количество верных ответов <i id="0numberOfCorrectAnswers"></i><br>
-                    Процент правильных ответов <i id="0percentOfCorrectAnswers"></i></p>
+                    Получено вопросов <i id="0numberOfQuestionsReceived"></i><br>
+                    Верных ответов <i id="0percentOfCorrectAnswers"></i><br>
         </div>
         <div id="1Player" class="card-body text-white bg-success">
                 <h4>Второй игрок</h4>
                 <p>Количество перемещений <i id="1numberOfMoves"></i><br>
                     Количество очков <i id="1numberOfPoints"></i><br>
-                    Количество полученных вопросов <i id="1numberOfQuestionsReceived"></i><br>
-                    Количество верных ответов <i id="1numberOfCorrectAnswers"></i><br>
-                    Процент правильных ответов <i id="1percentOfCorrectAnswers"></i></p>
+                    Получено вопросов <i id="1numberOfQuestionsReceived"></i><br>
+                    Вырных ответов <i id="1percentOfCorrectAnswers"></i><br>
         </div>
         <div id="2Player" class="card-body text-white bg-danger" style="display: none">
                 <h4>Третий игрок</h4>
                 <p>Количество перемещений <i id="2numberOfMoves"></i><br>
                     Количество очков <i id="2numberOfPoints"></i><br>
-                    Количество полученных вопросов <i id="2numberOfQuestionsReceived"></i><br>
-                    Количество верных ответов <i id="2numberOfCorrectAnswers"></i><br>
-                    Процент правильных ответов <i id="2percentOfCorrectAnswers"></i></p>
+                    Получено вопросов <i id="2numberOfQuestionsReceived"></i><br>
+                    Верных ответов <i id="2percentOfCorrectAnswers"></i><br>
         </div>
         <div id="3Player" class="card-body text-white bg-info" style="display: none">
                 <h4>Четвертый игрок</h4>
                 <p>Количество перемещений <i id="3numberOfMoves"></i><br>
                     Количество очков <i id="3numberOfPoints"></i><br>
-                    Количество полученных вопросов <i id="3numberOfQuestionsReceived"></i><br>
-                    Количество верных ответов <i id="3numberOfCorrectAnswers"></i><br>
-                    Процент правильных ответов <i id="3percentOfCorrectAnswers"></i></p>
+                    Получено вопросов <i id="3numberOfQuestionsReceived"></i><br>
+                    Верных ответов <i id="3percentOfCorrectAnswers"></i><br>
         </div>
     </div>
 
