--- a/static/index.sass
+++ b/static/index.sass
@@ -81,6 +81,7 @@ body
         left: 220px
         width: 560px
         text-align: center
+        display: none
 
         span
             text-transform: uppercase
@@ -120,6 +121,13 @@ body
             top: -100px
             left: 275px
 
+    .endGame
+        position: absolute
+        top: 200px
+        left: 200px
+        margin-top: 23px
+        margin-left: 44px
+        display: none
 
     .chips img
         width: 50px
@@ -148,6 +156,7 @@ body
 
 .geography
     background-color: $color-geography
+
 .base
     background-color: $color-base
 
