Implemented: Docker, dicePlaying.min.js, deploy on server
Current problem: maybe the "roll the dice" button

--- a/templates/index.html
+++ b/templates/index.html
@@ -104,6 +104,6 @@
         <img id="endGame" class="endGame" src="/static/image/game-over-2.png" alt="Конец игры">
     </main>
 
-    <script src="/static/dicePlaying.js"></script>
+    <script src="/static/dicePlaying.min.js"></script>
 </body>
 </html>
